--- a/style/protfolio.css
+++ b/style/protfolio.css
@@ -18,6 +18,9 @@
     padding: 18px 36px;
     border-radius: 5px;
 }
+.text-center{
+    text-align: center;
+}
 /* header styles */
 .header{
     background-image: url(../images/developer.png),url('../images/header_bg.png');
@@ -81,6 +84,7 @@ nav ul{
 }
 /* about styles */
 .about{
+    background-color:#FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
@@ -94,3 +98,10 @@ nav ul{
 }
 .item-description{
     font-weight: bold;
+
+
+    
+/* skills section styles */
+.skill-container{
+    display: flex;
+}
